<resources>
    <string name="app_name">Jobby</string>
    <string name="splash_screen">help you to find it!</string>
    <string name="findit">find it!</string>
    <string name="about">about</string>
    <string name="privacyp">privacy policy</string>
    <string name="filters">filters</string>
    <string name="lokasi">LOKASI</string>
    <string name="batasumur">BATAS UMUR</string>
    <string name="pendidikanterakhir">PENDIDIKAN TERAKHIR</string>
    <string name="rentanggaji">RENTANG GAJI</string>
    <string name="search">Search here…</string>
    <string name="back">back</string>
    <string name="desc">Deskripsi Pekerjaan</string>
    <string name="req">Requirements</string>
    <string name="inf">Informasi Tambahan</string>
    <string name="gaji">Gaji:</string>
    <string name="pendidikan">Pendidikan terakhir:</string>
    <string name="umurmin">Umur minimal:</string>
    <string name="umurmax">Umur maksimal:</string>
    <string name="numb">00000</string>
    <string name="inflanjut">Untuk lebih lanjutnya, silakan klik di sini.</string>
    <string name="infolebihlanjut">info lebih lanjut</string>
</resources>