<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentmain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/jobbymain"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/jobbymain" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnFindIt"
        android:layout_width="120dp"
        android:layout_height="70dp"
        android:layout_below="@+id/jobbymain"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/yellow1"
        android:fontFamily="@font/pangolin"
        android:includeFontPadding="false"
        android:text="@string/findit"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:cornerRadius="20dp" />

    <TextView
        android:id="@+id/privacypolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/play"
        android:text="@string/privacyp"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/privacypolicy"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="7dp"
        android:fontFamily="@font/play"
        android:text="@string/about"
        android:textColor="@color/white"
        android:textSize="17sp" />

</RelativeLayout>