<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lpparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_purple"
    tools:context=".LowonganPekerjaanActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/yellow2" />

    <ImageView
        android:id="@+id/lpjobbylogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:contentDescription="@string/app_name"
        android:src="@mipmap/jobbylogo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lpbtnFilter"
        android:layout_width="115dp"
        android:layout_height="50dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@+id/lpjobbylogo"
        android:backgroundTint="@color/gray"
        android:fontFamily="@font/pangolin"
        android:includeFontPadding="false"
        android:text="@string/filters"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:cornerRadius="20dp" />

    <!--    <EditText-->
    <!--        android:id="@+id/lpEditText"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="45dp"-->
    <!--        android:layout_below="@+id/lpjobbylogo"-->
    <!--        android:layout_marginStart="10dp"-->
    <!--        android:layout_marginTop="20dp"-->
    <!--        android:layout_marginEnd="10dp"-->
    <!--        android:background="@drawable/rounded_edit_text"-->
    <!--        android:fontFamily="@font/pangolin"-->
    <!--        android:hint="@string/search"-->
    <!--        android:paddingStart="20dp"-->
    <!--        android:paddingTop="10dp"-->
    <!--        android:paddingEnd="20dp"-->
    <!--        android:paddingBottom="10dp"-->
    <!--        android:textColor="@color/black"-->
    <!--        android:textColorHint="@color/black"-->
    <!--        android:textSize="20sp"-->
    <!--        android:inputType="text"-->
    <!--        android:importantForAutofill="no"-->
    <!--        android:translationZ="90dp"/>-->

    <SearchView
        android:layout_below="@+id/toolbar"
        android:id="@+id/lpSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/searchview_background"
        android:queryHint="@string/search"
        android:iconifiedByDefault="false"
        android:queryBackground="@color/transparent"
        />


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lpRecView"
        android:layout_below="@+id/lpSearchView"
        android:layout_centerHorizontal="true"/>


</RelativeLayout>